--- a/MyaDiscordBot/MyaDiscordBot.csproj
+++ b/MyaDiscordBot/MyaDiscordBot.csproj
@@ -29,6 +29,9 @@
     <None Update="config\crafttable.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="config\Items\T6.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="config\resource.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
