--- a/MyaDiscordBot/MyaDiscordBot.csproj
+++ b/MyaDiscordBot/MyaDiscordBot.csproj
@@ -29,7 +29,13 @@
     <None Update="config\crafttable.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="config\Items\T7.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="config\Items\T6.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="config\pets.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="config\resource.json">
