--- a/MyaDiscordBot/MyaDiscordBot.csproj
+++ b/MyaDiscordBot/MyaDiscordBot.csproj
@@ -9,12 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="7.0.1" />
-    <PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.4" />
-    <PackageReference Include="Discord.Net" Version="3.7.2" />
+    <PackageReference Include="Autofac" Version="7.1.0" />
+    <PackageReference Include="Betalgo.OpenAI" Version="7.1.5" />
+    <PackageReference Include="Discord.Net" Version="3.12.0" />
     <PackageReference Include="LiteDB" Version="5.0.17" />
-    <PackageReference Include="OpenAI-DotNet" Version="7.0.4" />
-    <PackageReference Include="Quartz" Version="3.6.2" />
+    <PackageReference Include="OpenAI-DotNet" Version="7.0.5" />
+    <PackageReference Include="Quartz" Version="3.7.0" />
   </ItemGroup>
 
   <ItemGroup>
